--- a/style.css
+++ b/style.css
@@ -27,12 +27,14 @@ ul li {
 }
 
 footer {
-  background-color: #002147; 
-  color: #fff; 
-  padding: 20px; 
-  font-size: 16px; 
-  font-family: Arial, sans-serif; 
+  background-color: #4B7B9F;
+  padding: 20px;
+  color: white;
+  text-align: center;
+  font-size: 14px;
+  background: linear-gradient(to bottom, #4B7B9F, #C7D5E0);
 }
+
 
 footer a {
   color: #fff; 
